base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: maven-micro.com
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3001

          - path: /profiles
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 3002

          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3003

          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 3004
